--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,14 @@
 {
 	"extends": "airbnb",
+	"parser": "babel-eslint",
 	rules: {
 		"strict": [2, "global"],
 		"space-before-function-paren": [2, "never"],
 		"indent": [2, "tab"],
-		"spaced-comment": 0
+		"spaced-comment": 0,
+		"react/jsx-indent-props": [2, "tab"]
+	},
+	"ecmaFeatures" : {
+		"experimentalObjectRestSpread":true
 	}
 }
