--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-core": "^6.3.21",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
     "bootstrap-webpack": "0.0.5",
     "bower-resolve": "latest",
@@ -62,6 +64,7 @@
     "react": "^0.14.3",
     "react-document-meta": "^2.0.0",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.2",
     "react-router": "^1.0.2",
     "redux": "^3.0.5",
     "redux-form": "^4.0.3",
