ajax centralisé, les reducers sont bien settés, etc.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
 		"space-before-function-paren": [2, "never"],
 		"indent": [2, "tab"],
 		"spaced-comment": 0,
-		"react/jsx-indent-props": [2, "tab"]
+		"react/jsx-indent-props": [2, "tab"],
+		"padded-blocks": [0],
 	},
 	"ecmaFeatures" : {
 		"experimentalObjectRestSpread":true
