authorisation et ajax par middelware

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
 		"spaced-comment": 0,
 		"react/jsx-indent-props": [2, "tab"],
 		"padded-blocks": [0],
+		"no-unused-vars": [1],
+		"no-trailing-spaces": [1],
 	},
 	"ecmaFeatures" : {
 		"experimentalObjectRestSpread":true
