--- a/package.json
+++ b/package.json
@@ -59,20 +59,21 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "history": "^1.13.1",
-    "jquery": "^2.1.4",
-    "jwt-decode": "^1.4.0",
-    "react": "^0.14.3",
-    "react-document-meta": "^2.0.0",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.2",
-    "react-router": "^1.0.2",
+    "history": "^1.17.0",
+    "jquery": "^2.2.0",
+    "jwt-decode": "^1.5.0",
+    "less": "^2.5.3",
+    "react": "^0.14.6",
+    "react-document-meta": "^2.0.1",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
-    "redux-form": "^4.0.3",
-    "redux-logger": "^2.3.1",
+    "redux-form": "^4.1.1",
+    "redux-logger": "^2.3.2",
     "redux-simple-localstorage": "^1.0.2",
-    "redux-simple-router": "^1.0.1",
-    "redux-thunk": "^1.0.2",
+    "redux-simple-router": "^1.0.2",
+    "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5"
   }
 }
