--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux-simple-localstorage": "^1.0.2",
     "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.3",
-    "reqwest": "^2.0.5"
+    "reqwest": "^2.0.5",
+    "reselect": "^2.0.2"
   }
 }
