--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jwt-decode": "^1.5.0",
     "less": "^2.5.3",
     "react": "^0.14.6",
+    "react-addons-perf": "^0.14.7",
     "react-document-meta": "^2.0.1",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
