--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
 		"react/jsx-indent-props": [2, "tab"],
 		"padded-blocks": [0],
 		"camelcase": [0],
+		"no-nested-ternary": [0],
 		"no-unused-vars": [1],
 		"no-trailing-spaces": [1],
 	},
