--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "less": "^2.5.3",
     "react": "^0.14.6",
     "react-addons-perf": "^0.14.7",
+    "react-autocomplete": "^0.1.4",
     "react-document-meta": "^2.0.1",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
