--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
+    "react-tinymce-input": "^1.1.0",
     "redux": "^3.0.5",
     "redux-form": "^4.1.1",
     "redux-logger": "^2.3.2",
