--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "yargs": "^3.18.0"
   },
   "dependencies": {
+    "bluebird": "^3.3.1",
     "bootstrap": "^3.3.6",
     "history": "^1.17.0",
     "jquery": "^2.2.0",
