--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "bluebird": "^3.3.1",
     "bootstrap": "^3.3.6",
+    "font-awesome": "^4.5.0",
     "history": "^1.17.0",
     "jquery": "^2.2.0",
     "jwt-decode": "^1.5.0",
