--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "express": "^4.13.3",
     "express-open-in-editor": "^1.0.0",
     "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
+    "file-loader": "^0.8.5",
     "imports-loader": "^0.6.4",
     "less-loader": "^2.2.2",
     "morgan": "^1.6.1",
@@ -50,7 +50,7 @@
     "react-hot-loader": "^1.2.7",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
+    "url-loader": "^0.5.7",
     "webpack": "^1.9.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.8.2",
@@ -59,8 +59,9 @@
   },
   "dependencies": {
     "bluebird": "^3.3.1",
-    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.5.0",
+    "gsap": "^1.18.2",
     "history": "^1.17.0",
     "jquery": "^2.2.0",
     "jwt-decode": "^1.5.0",
