--- a/package.json
+++ b/package.json
@@ -67,19 +67,19 @@
     "jwt-decode": "^1.5.0",
     "less": "^2.5.3",
     "normalizr": "^2.0.0",
-    "react": "^0.14.6",
+    "react": "~15.0.0",
     "react-addons-perf": "^0.14.7",
     "react-autocomplete": "^0.1.4",
     "react-document-meta": "^2.0.1",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.0",
-    "react-router": "^1.0.3",
+    "react-router": "~2.0.0",
     "react-tinymce-input": "^1.1.0",
     "redux": "^3.0.5",
     "redux-form": "^4.1.1",
     "redux-logger": "^2.3.2",
     "redux-simple-localstorage": "^1.0.2",
-    "redux-simple-router": "^1.0.2",
+    "react-router-redux": "~4.0.0",
     "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
     "reselect": "^2.0.2"
