--- a/package.json
+++ b/package.json
@@ -74,14 +74,15 @@
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.0",
     "react-router": "~2.0.0",
+    "react-router-redux": "~4.0.0",
     "react-tinymce-input": "^1.1.0",
     "redux": "^3.0.5",
     "redux-form": "^4.1.1",
     "redux-logger": "^2.3.2",
     "redux-simple-localstorage": "^1.0.2",
-    "react-router-redux": "~4.0.0",
     "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
-    "reselect": "^2.0.2"
+    "reselect": "^2.0.2",
+    "sha1": "^1.1.1"
   }
 }
