--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "react": "~15.0.0",
     "react-addons-perf": "^0.14.7",
     "react-autocomplete": "^0.2.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.0",
