--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "normalizr": "^2.0.0",
     "react": "~15.0.0",
     "react-addons-perf": "^0.14.7",
-    "react-autocomplete": "^0.2.1",
+    "react-autocomplete": "1.0.0-rc2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
