--- a/package.json
+++ b/package.json
@@ -66,18 +66,19 @@
     "jwt-decode": "^1.5.0",
     "less": "^2.5.3",
     "normalizr": "^2.0.0",
-    "react": "~15.0.0",
-    "react-addons-perf": "^0.14.7",
+    "react": "^15.1.0",
+    "react-addons-perf": "^15.1.0",
     "react-autocomplete": "1.0.0-rc2",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
-    "react-dom": "^0.14.6",
+    "react-dom": "^15.1.0",
+    "react-modal": "^1.3.0",
     "react-redux": "^4.4.0",
     "react-router": "~2.0.0",
     "react-router-redux": "~4.0.0",
     "react-tinymce-input": "^1.2.0",
-    "redux": "^3.0.5",
+    "redux": "^3.5.2",
     "redux-form": "^4.1.1",
     "redux-logger": "^2.3.2",
     "redux-simple-localstorage": "^1.0.2",
