--- a/package.json
+++ b/package.json
@@ -66,13 +66,13 @@
     "jwt-decode": "^1.5.0",
     "less": "^2.5.3",
     "normalizr": "^2.0.0",
-    "react": "^15.1.0",
-    "react-addons-perf": "^15.1.0",
-    "react-autocomplete": "1.0.0-rc2",
+    "react": "~15.0.2",
+    "react-addons-perf": "~15.0.2",
+    "react-autocomplete": "^1.0.0-rc6",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
-    "react-dom": "^15.1.0",
+    "react-dom": "~15.0.2",
     "react-modal": "^1.3.0",
     "react-redux": "^4.4.0",
     "react-router": "~2.0.0",
