--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "normalizr": "^2.0.0",
     "react": "~15.0.2",
     "react-addons-perf": "~15.0.2",
-    "react-autocomplete": "^1.0.0-rc6",
+    "react-autosuggest": "^3.7.4",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
