--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "jquery": "^2.2.0",
     "jwt-decode": "^1.5.0",
     "less": "^2.5.3",
+    "moment": "^2.13.0",
     "normalizr": "^2.0.0",
     "react": "~15.0.2",
     "react-addons-perf": "~15.0.2",
     "react-autosuggest": "^3.7.4",
+    "react-datepicker": "^0.27.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
