--- a/.eslintrc
+++ b/.eslintrc
@@ -7,11 +7,25 @@
 		"indent": [2, "tab"],
 		"spaced-comment": 0,
 		"react/jsx-indent-props": [2, "tab"],
+		"react/jsx-indent": [2, "tab"],
 		"padded-blocks": [0],
 		"camelcase": [0],
 		"no-nested-ternary": [0],
 		"no-unused-vars": [1],
 		"no-trailing-spaces": [0],
+		"arrow-body-style": [0],
+		"newline-per-chained-call": [0],
+		"prefer-template": [0],
+		"import/no-unresolved": [0],
+		"jsx-a11y/img-has-alt": [0],
+		"no-return-assign": [0],
+		"max-len": [0],
+		"global-require": [0],
+		"no-console": ["warn", { allow: ["warn", "error"] }],
+		"react/prefer-stateless-function": [0],
+		"no-param-reassign": ["error", { "props": false }],
+		"no-underscore-dangle": ["error", { "allowAfterThis": true }],
+		"consistent-return": ["error", { "treatUndefinedAsUnspecified": true }],
 	},
 	"ecmaFeatures" : {
 		"experimentalObjectRestSpread":true
