--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cssnext-loader": "^1.0.1",
     "csswring": "^4.0.0",
     "deep-equal": "^1.0.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint": "^3.2.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "expect": "^1.12.0",
     "exports-loader": "^0.6.2",
     "express": "^4.13.3",
