--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.8.2",
     "webpack-hot-middleware": "^2.4.1",
-    "yargs": "^3.18.0"
+    "yargs": "^3.18.0",
     "bluebird": "^3.3.1",
     "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.5.0",
