--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "webpack-dev-server": "^1.8.2",
     "webpack-hot-middleware": "^2.4.1",
     "yargs": "^3.18.0"
+  },
+  "dependencies": {
+    "react-custom-scrollbars": "^4.0.1"
   }
 }
