--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "bluebird": "^3.3.1",	
     "bootstrap-sass": "^3.3.6",
     "bootstrap-webpack": "0.0.6",
     "bower-resolve": "latest",
@@ -52,6 +53,8 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "font-awesome-sass-loader": "^2.0.1",
+    "gsap": "^1.18.2",	
+    "history": "^1.17.0",	
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "less": "^2.5.3",
@@ -62,9 +65,19 @@
     "normalizr": "^2.0.0",
     "postcss-loader": "^2.0.6",
     "qs": "^5.2.0",
+    "react": "~15.0.2",
+    "react-dom": "~15.0.2",
+    "react-redux": "^4.4.0",
+	"react-router": "~2.0.0",
+    "react-router-redux": "~4.0.0",
     "react-addons-perf": "~15.0.2",
     "react-hot-loader": "^1.3.1",
     "redux-simple-localstorage": "^1.0.2",
+	"redux": "^3.5.2",
+    "redux-logger": "^2.3.2",
+    "redux-thunk": "^1.0.3",
+    "reqwest": "^2.0.5",
+    "reselect": "^2.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
@@ -76,31 +89,33 @@
     "yargs": "^3.18.0"
   },
   "dependencies": {
-    "bluebird": "^3.3.1",
     "font-awesome": "^4.7.0",
-    "gsap": "^1.18.2",	
-    "history": "^1.17.0",
     "jwt-decode": "^1.5.0",
     "md5": "^2.1.0",
-    "react": "~15.0.2",
     "react-autosuggest": "^6.0.2",
     "react-datepicker": "^0.27.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
-    "react-dom": "~15.0.2",
     "react-load-script": "0.0.2",
     "react-modal": "^1.3.0",
-    "react-redux": "^4.4.0",
-    "react-router": "~2.0.0",
-    "react-router-redux": "~4.0.0",
     "react-tinymce-input": "^1.2.0",
     "react-custom-scrollbars": "^4.0.1",
-    "redux": "^3.5.2",
+    "sha1": "^1.1.1"
+  },
+  "peerDependencies": {
+    "bluebird": "^3.3.1",
+    "gsap": "^1.18.2",		
+    "history": "^1.17.0",
+    "react": "~15.0.2",
+    "react-dom": "~15.0.2",
+    "react-redux": "^4.4.0",
+	"react-router": "~2.0.0",
+    "react-router-redux": "~4.0.0",
+	"redux": "^3.5.2",
     "redux-logger": "^2.3.2",
     "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
-    "reselect": "^2.5.1",
-    "sha1": "^1.1.1"
+    "reselect": "^2.5.1"
   }
 }
