--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "files": [
     "dist",
-	"src"
+    "src"
   ],
   "author": "",
   "license": "MIT",
@@ -28,7 +28,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
-    "bluebird": "^3.3.1",	
+    "bluebird": "^3.3.1",
     "bootstrap-sass": "^3.3.6",
     "bootstrap-webpack": "0.0.6",
     "bower-resolve": "latest",
@@ -53,8 +53,8 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "font-awesome-sass-loader": "^2.0.1",
-    "gsap": "^1.18.2",	
-    "history": "^1.17.0",	
+    "gsap": "^1.18.2",
+    "history": "^4.6.3",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "less": "^2.5.3",
@@ -65,16 +65,17 @@
     "normalizr": "^2.0.0",
     "postcss-loader": "^2.0.6",
     "qs": "^5.2.0",
-    "react": "~15.0.2",
-    "react-dom": "~15.0.2",
-    "react-redux": "^4.4.0",
-	"react-router": "~2.0.0",
-    "react-router-redux": "~4.0.0",
-    "react-addons-perf": "~15.0.2",
+    "react": "^15.6.1",
+    "react-addons-perf": "^15.4.2",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
-    "redux-simple-localstorage": "^1.0.2",
-	"redux": "^3.5.2",
+    "react-redux": "^4.4.8",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "~4.0.8",
+    "redux": "^3.5.2",
     "redux-logger": "^2.3.2",
+    "redux-simple-localstorage": "^1.0.2",
     "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
     "reselect": "^2.5.1",
@@ -105,14 +106,13 @@
   },
   "peerDependencies": {
     "bluebird": "^3.3.1",
-    "gsap": "^1.18.2",		
-    "history": "^1.17.0",
-    "react": "~15.0.2",
-    "react-dom": "~15.0.2",
-    "react-redux": "^4.4.0",
-	"react-router": "~2.0.0",
-    "react-router-redux": "~4.0.0",
-	"redux": "^3.5.2",
+    "gsap": "^1.18.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^4.4.8",
+    "react-router": "^4.1.1",
+    "react-router-redux": "~4.0.8",
+    "redux": "^3.5.2",
     "redux-logger": "^2.3.2",
     "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
