--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 		"spaced-comment": 0,
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-indent": [2, "tab"],
+		"react/sort-comp": 0,
 		"padded-blocks": [0],
 		"camelcase": [0],
 		"no-nested-ternary": [0],
