--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.1",
+    "react-hotkeys": "^2.0.0-pre3",
     "react-load-script": "0.0.2",
     "react-modal": "^1.3.0",
     "react-tinymce-input": "^1.2.0",
