--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "bluebird": "^3.3.1",
     "bootstrap-sass": "^3.3.6",
     "bootstrap-webpack": "0.0.6",
-    "bower-resolve": "latest",
     "classnames": "^2.1.3",
     "colors": "latest",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
-    "cssnext-loader": "^1.0.1",
     "csswring": "^4.0.0",
     "deep-equal": "^1.0.1",
     "eslint": "^3.2.0",
@@ -54,67 +52,61 @@
     "file-loader": "^0.11.2",
     "font-awesome-sass-loader": "^2.0.1",
     "gsap": "^1.18.2",
-    "history": "^3.3.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.7.1",
-    "less": "^2.5.3",
-    "less-loader": "^4.0.4",
     "moment": "^2.13.0",
     "morgan": "^1.6.1",
-    "node-sass": "^3.1.2",
     "normalizr": "^2.0.0",
     "postcss-loader": "^2.0.6",
     "qs": "^5.2.0",
-    "react": "^15.6.1",
-    "react-addons-perf": "^15.4.2",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "^1.3.1",
-    "react-redux": "^4.4.8",
-    "react-router": "^3.0.0",
-    "react-router-redux": "~4.0.8",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.3.2",
-    "redux-simple-localstorage": "^1.0.2",
-    "redux-thunk": "^1.0.3",
     "reqwest": "^2.0.5",
     "reselect": "^2.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.6.1",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dashboard": "^3.0.2",
+    "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.24.3",
     "yargs": "^3.18.0"
   },
   "dependencies": {
+    "connected-react-router": "^6.3.2",
+    "create-react-class": "^15.6.3",
     "font-awesome": "^4.7.0",
+    "history": "^4.9.0",
     "jwt-decode": "^1.5.0",
     "md5": "^2.1.0",
-    "react-autosuggest": "^6.0.2",
-    "react-custom-scrollbars": "^4.0.1",
-    "react-datepicker": "^1.2.1",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-document-meta": "^2.0.1",
-    "react-hotkeys": "^2.0.0-pre3",
-    "react-load-script": "0.0.2",
-    "react-modal": "^1.3.0",
-    "react-tinymce-input": "^1.2.0",
-    "sha1": "^1.1.1"
+    "node-sass": "^4.11.0",
+    "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^2.3.0",
+    "react-dnd": "^7.4.5",
+    "react-dnd-html5-backend": "^7.4.4",
+    "react-document-meta": "^3.0.0-beta.2",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.2",
+    "react-hotkeys": "^1.1.4",
+    "react-load-script": "0.0.6",
+    "react-modal": "^3.8.1",
+    "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-tinymce-input": "^2.1.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-simple-localstorage": "^1.0.2",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^2.5.4",
+    "sha1": "^1.1.1",
+    "styled-components": "^4.2.0"
   },
   "peerDependencies": {
     "bluebird": "^3.3.1",
     "gsap": "^1.18.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^4.4.8",
-    "react-router-redux": "~4.0.8",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.3.2",
-    "redux-thunk": "^1.0.3",
-    "reqwest": "^2.0.5",
-    "reselect": "^2.5.1"
+    "reqwest": "^2.0.5"
   }
 }
