--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "yargs": "^3.18.0"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.0.1",
     "connected-react-router": "^6.3.2",
     "create-react-class": "^15.6.3",
     "font-awesome": "^4.7.0",
