--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freestone-admin",
-  "version": "2.2.0",
+  "version": "2.02.00",
   "description": "",
   "scripts": {
     "start-wp1": "node server.js",
@@ -33,7 +33,7 @@
     "bootstrap-webpack": "0.0.6",
     "classnames": "^2.1.3",
     "colors": "latest",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.4",
     "csswring": "^4.0.0",
     "deep-equal": "^1.0.1",
@@ -48,7 +48,7 @@
     "exports-loader": "^0.6.4",
     "express": "^4.13.3",
     "express-open-in-editor": "^1.0.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^0.11.2",
     "font-awesome-sass-loader": "^2.0.1",
     "gsap": "^1.18.2",
@@ -63,6 +63,7 @@
     "reselect": "^2.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^0.5.9",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
