--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "history": "^4.9.0",
     "jwt-decode": "^1.5.0",
     "md5": "^2.1.0",
+    "memoize-one": "^5.0.4",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
