--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "md5": "^2.1.0",
     "memoize-one": "^5.0.4",
     "node-sass": "^4.11.0",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
