--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "yargs": "^3.18.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@tinymce/tinymce-react": "^3.0.1",
     "connected-react-router": "^6.3.2",
     "create-react-class": "^15.6.3",
