--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
-    "bluebird": "^3.3.1",
     "bootstrap-sass": "^3.3.6",
     "bootstrap-webpack": "0.0.6",
     "classnames": "^2.1.3",
@@ -51,7 +50,6 @@
     "express-open-in-editor": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^0.11.2",
-    "gsap": "^1.18.2",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.7.1",
     "moment": "^2.13.0",
@@ -78,8 +76,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@tinymce/tinymce-react": "^3.0.1",
+	"bluebird": "^3.3.1",
     "connected-react-router": "^6.3.2",
     "create-react-class": "^15.6.3",
+    "gsap": "^1.18.2",
     "history": "^4.9.0",
     "jwt-decode": "^1.5.0",
     "left-pad": "^1.3.0",
@@ -107,12 +107,8 @@
     "redux-logger": "^3.0.6",
     "redux-simple-localstorage": "^1.0.2",
     "redux-thunk": "^2.3.0",
+    "reqwest": "^2.0.5",
     "sha1": "^1.1.1",
     "styled-components": "^4.2.0"
-  },
-  "peerDependencies": {
-    "bluebird": "^3.3.1",
-    "gsap": "^1.18.2",
-    "reqwest": "^2.0.5"
   }
 }
