--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 	"bluebird": "^3.3.1",
     "connected-react-router": "^6.3.2",
     "create-react-class": "^15.6.3",
-    "gsap": "^1.18.2",
+    "gsap": "1.20.3",
     "history": "^4.9.0",
     "jwt-decode": "^1.5.0",
     "left-pad": "^1.3.0",
