--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.2",
     "react-hotkeys": "^1.1.4",
+    "react-image-crop": "^8.6.5",
     "react-load-script": "0.0.6",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
