--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^2.3.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-document-meta": "^3.0.0-beta.2",
