--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-	"plugins": ["transform-decorators-legacy"],
+	"plugins": ["transform-decorators-legacy", "babel-plugin-styled-components"],
 	"presets": ["es2015", "stage-1", "react"]
 }
