--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-tinymce-input": "^2.1.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-simple-localstorage": "^1.0.2",
