--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "",
   "scripts": {
     "start-wp1": "node server.js",
-    "start": "webpack-dev-server --colors",
-    "start-http": "webpack-dev-server --colors --http",
+    "start": "webpack serve --color",
     "build": "rm -rf ./dist; env NODE_ENV=production webpack",
     "lint": "eslint src"
   },
