--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start-wp1": "node server.js",
     "start": "webpack serve --color",
-    "build": "rm -rf ./dist; env NODE_ENV=production webpack",
+    "build": "bash scripts/build.sh",
     "lint": "eslint src"
   },
   "repository": {
