--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "yargs": "^3.18.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/react-fontawesome": "^0.1.13",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@tinymce/tinymce-react": "^3.8.1",
     "bluebird": "^3.3.1",
     "connected-react-router": "^6.3.2",
@@ -92,7 +92,7 @@
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
     "react-hotkeys": "^1.1.4",
-    "react-image-crop": "^8.6.6",
+    "react-image-crop": "8.6.9",
     "react-intersection-observer": "^8.31.0",
     "react-load-script": "0.0.6",
     "react-modal": "^3.12.1",
